--- a/app/src/main/res/layout/activity_editdata.xml
+++ b/app/src/main/res/layout/activity_editdata.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView4"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:textSize="16dp"
+        android:textSize="18dp"
         android:text="เลขครุภัณฑ์"
         android:textColor="@color/colorBlack"
         android:gravity="center_vertical"
@@ -29,7 +29,7 @@
         android:id="@+id/textView8"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:textSize="16dp"
+        android:textSize="18dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:textColor="@color/colorBlack"
@@ -42,14 +42,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.531" />
+        app:layout_constraintVertical_bias="0.527" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="100dp"
+        android:layout_width="120dp"
         android:layout_height="30dp"
         android:layout_marginBottom="8dp"
-        android:textSize="16dp"
+        android:textSize="18dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
@@ -57,17 +57,17 @@
         android:textColor="@color/colorBlack"
         android:gravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.029"
+        app:layout_constraintHorizontal_bias="0.032"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.429" />
+        app:layout_constraintVertical_bias="0.426" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:textSize="16dp"
+        android:textSize="18dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -80,7 +80,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.33" />
+        app:layout_constraintVertical_bias="0.326" />
 
     <TextView
         android:id="@+id/textView5"
@@ -88,7 +88,7 @@
         android:layout_height="30dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        android:textSize="16dp"
+        android:textSize="18dp"
         android:layout_marginRight="8dp"
         android:textColor="@color/colorBlack"
         android:layout_marginTop="8dp"
@@ -121,8 +121,9 @@
 
     <EditText
         android:id="@+id/etE_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="40dp"
+        android:textSize="18dp"
         android:textColor="@color/colorBlack"
         android:ems="10"
         android:inputType="textPersonName"
@@ -135,13 +136,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.738"
+        app:layout_constraintHorizontal_bias="0.787"
         app:layout_constraintVertical_bias="0.21" />
 
     <EditText
         android:id="@+id/etE_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:textSize="18dp"
+        android:layout_width="180dp"
+        android:layout_height="40dp"
         android:textColor="@color/colorBlack"
         android:ems="10"
         android:inputType="textPersonName"
@@ -154,13 +156,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.738"
+        app:layout_constraintHorizontal_bias="0.787"
         app:layout_constraintVertical_bias="0.312" />
 
     <EditText
         android:id="@+id/etE_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="40dp"
+        android:textSize="18dp"
         android:textColor="@color/colorBlack"
         android:hint="ราคาต่อหน่วย"
         android:ems="10"
@@ -173,13 +176,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.738"
+        app:layout_constraintHorizontal_bias="0.787"
         app:layout_constraintVertical_bias="0.415" />
 
     <EditText
         android:id="@+id/etE_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:textSize="18dp"
+        android:layout_width="180dp"
+        android:layout_height="40dp"
         android:textColor="@color/colorBlack"
         android:ems="10"
         android:inputType="textPersonName"
@@ -192,7 +196,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.738"
+        app:layout_constraintHorizontal_bias="0.787"
         app:layout_constraintVertical_bias="0.519" />
 
     <Button
@@ -213,11 +217,11 @@
 
     <TextView
         android:id="@+id/textVEA1"
-        android:layout_width="210dp"
+        android:layout_width="180dp"
         android:layout_height="40dp"
         android:textColor="@color/colorBlack"
-        android:gravity="center"
-        android:textSize="16dp"
+        android:gravity="center_vertical"
+        android:textSize="18dp"
         android:text=""
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -228,7 +232,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.115"
-        app:layout_constraintHorizontal_bias="0.746" />
+        app:layout_constraintHorizontal_bias="0.787" />
 
 
 </android.support.constraint.ConstraintLayout>
