--- a/app/src/main/res/drawable-xhdpi/bg_img_view.xml
+++ b/app/src/main/res/drawable-xhdpi/bg_img_view.xml
@@ -18,8 +18,8 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="5dip" />
-            <stroke android:width="1dip" android:color="#000000" />
-            <gradient android:angle="-90" android:startColor="#0066FF" android:endColor="#33CCFF" />
+            <stroke android:width="2dip" android:color="#000000" />
+            <gradient android:angle="-90" android:startColor="#FFFFFF" android:endColor="#FFFFFF" />
         </shape>
     </item>
 </selector>
