--- a/app/src/main/res/layout-land/activity_user_area.xml
+++ b/app/src/main/res/layout-land/activity_user_area.xml
@@ -52,6 +52,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
+        style="@style/img_view"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.097" />
