--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -3,9 +3,9 @@
 
     <style name="ToRTheme" parent="AppTheme">
         <item name="colorPrimary">@color/ForestGreen</item>
-        <item name="colorPrimaryDark">@color/MedSpringGreen</item>
+        <item name="colorPrimaryDark">@color/Gold</item>
         <item name="colorAccent">@color/DarkGreen</item>
-        <item name="android:colorBackground">@color/LightCyan</item>
-        <item name="android:navigationBarColor">@color/Green</item>
+        <item name="android:colorBackground">@color/WYellow</item>
+        <item name="android:navigationBarColor">@color/Gold</item>
     </style>
 </resources>
