--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,7 @@
     <color name="DarkGreen">#006400</color>
     <color name="LightCyan">#e0ffff</color>
     <color name="Green">#00ff00</color>
+    <color name="WYellow">#ffff99</color>
+    <color name="Gold">#ffd700</color>
 
 </resources>
