--- a/app/src/main/res/layout/activity_editdata.xml
+++ b/app/src/main/res/layout/activity_editdata.xml
@@ -23,7 +23,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.029"
-        app:layout_constraintVertical_bias="0.132" />
+        app:layout_constraintVertical_bias="0.46" />
 
     <TextView
         android:id="@+id/textView8"
@@ -42,7 +42,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.527" />
+        app:layout_constraintVertical_bias="0.863" />
 
     <TextView
         android:id="@+id/textView7"
@@ -61,7 +61,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.426" />
+        app:layout_constraintVertical_bias="0.748" />
 
     <TextView
         android:id="@+id/textView6"
@@ -80,7 +80,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.326" />
+        app:layout_constraintVertical_bias="0.662" />
 
     <TextView
         android:id="@+id/textView5"
@@ -99,7 +99,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.23" />
+        app:layout_constraintVertical_bias="0.566" />
 
     <ImageView
         android:id="@+id/imageView14"
@@ -137,7 +137,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.787"
-        app:layout_constraintVertical_bias="0.21" />
+        app:layout_constraintVertical_bias="0.567" />
 
     <EditText
         android:id="@+id/etE_location"
@@ -157,7 +157,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.787"
-        app:layout_constraintVertical_bias="0.312" />
+        app:layout_constraintVertical_bias="0.661" />
 
     <EditText
         android:id="@+id/etE_price"
@@ -177,7 +177,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.787"
-        app:layout_constraintVertical_bias="0.415" />
+        app:layout_constraintVertical_bias="0.743" />
 
     <EditText
         android:id="@+id/etE_date"
@@ -197,7 +197,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.787"
-        app:layout_constraintVertical_bias="0.519" />
+        app:layout_constraintVertical_bias="0.866" />
 
     <Button
         android:id="@+id/btnE_edit"
@@ -213,7 +213,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.719" />
+        app:layout_constraintVertical_bias="0.984" />
 
     <TextView
         android:id="@+id/textVEA1"
@@ -231,8 +231,23 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.115"
+        app:layout_constraintVertical_bias="0.455"
         app:layout_constraintHorizontal_bias="0.787" />
+
+    <ImageView
+        android:id="@+id/imgE_img1"
+        android:layout_width="201dp"
+        android:layout_height="173dp"
+        app:srcCompat="@drawable/bg_img_view"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.022" />
 
 
 </android.support.constraint.ConstraintLayout>
