--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:text="ลงชื่อเข้าใช้ ผู้ใช้ทั่วไป"
         android:onClick="on_user"
+        android:textColor="@color/colorBlack"
         style="@style/btn_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
@@ -29,6 +30,7 @@
         android:id="@+id/btnL_Admin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorBlack"
         android:text="ลงชื่อเข้าใช้ ผู้ดูแล"
         android:layout_marginRight="8dp"
         android:onClick="on_admin"
