--- a/app/src/main/res/drawable/bg_btn_button.xml
+++ b/app/src/main/res/drawable/bg_btn_button.xml
@@ -19,7 +19,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="5dip" />
             <stroke android:width="1dip" android:color="#000000" />
-            <gradient android:angle="-90" android:startColor="#0066FF" android:endColor="#33CCFF" />
+            <gradient android:angle="-90" android:startColor="#66CCFF" android:endColor="#66FFCC" />
         </shape>
     </item>
 </selector>
