--- a/app/src/main/res/layout-land/activity_admin_area.xml
+++ b/app/src/main/res/layout-land/activity_admin_area.xml
@@ -28,6 +28,7 @@
 
     <Button
         android:id="@+id/btnA_Gencode"
+        android:textColor="@color/colorBlack"
         android:layout_width="150dp"
         android:layout_height="50dp"
         style="@style/btn_blue"
@@ -46,6 +47,7 @@
     <Button
         android:id="@+id/btnA_Scan"
         android:layout_width="150dp"
+        android:textColor="@color/colorBlack"
         style="@style/btn_blue"
         android:layout_height="50dp"
         android:layout_marginBottom="8dp"
@@ -75,6 +77,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@color/colorBlack"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.9"
         app:layout_constraintHorizontal_bias="0.018" />
