--- a/app/src/main/res/layout-land/activity_backgroundscan.xml
+++ b/app/src/main/res/layout-land/activity_backgroundscan.xml
@@ -7,7 +7,7 @@
     tools:context="com.android.alovia.projectqrcode.Backgroundscan">
 
     <ImageView
-        android:id="@+id/imageView11"
+        android:id="@+id/imageView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -16,30 +16,30 @@
         android:layout_marginTop="8dp"
         android:onClick="on_Bback"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.976"
+        app:layout_constraintHorizontal_bias="0.985"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.984"
+        app:layout_constraintVertical_bias="0.025"
         app:srcCompat="@android:drawable/ic_menu_revert"
         tools:ignore="ContentDescription" />
 
     <Button
         android:id="@+id/btn_Scan"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorBlack"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        style="@style/btn_blue"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        style="@style/btn_blue"
         android:text="สแกน"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.367"
-        app:layout_constraintHorizontal_bias="0.501" />
+        app:layout_constraintVertical_bias="0.562" />
 
     <TextView
         android:id="@+id/tvresult"
@@ -50,36 +50,21 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:padding="5dp"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.085" />
-
-    <EditText
-        android:id="@+id/et_GetText"
-        android:layout_width="280dp"
-        android:layout_height="54dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.643" />
+        app:layout_constraintVertical_bias="0.336" />
 
     <Button
         android:id="@+id/btnB_Search"
-        android:layout_width="150dp"
+        android:textColor="@color/colorBlack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         style="@style/btn_blue"
-        android:layout_height="50dp"
         android:text="ค้นหา"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -89,6 +74,6 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="0.882" />
+        app:layout_constraintVertical_bias="0.757" />
 
 </android.support.constraint.ConstraintLayout>
