--- a/app/src/main/res/layout-land/activity_backgroundscan2.xml
+++ b/app/src/main/res/layout-land/activity_backgroundscan2.xml
@@ -16,11 +16,11 @@
         android:layout_marginTop="8dp"
         android:onClick="on_BBback"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.976"
+        app:layout_constraintHorizontal_bias="0.985"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.984"
+        app:layout_constraintVertical_bias="0.025"
         app:srcCompat="@android:drawable/ic_menu_revert"
         tools:ignore="ContentDescription" />
 
@@ -29,6 +29,7 @@
         android:layout_width="150dp"
         style="@style/btn_blue"
         android:layout_height="50dp"
+        android:textColor="@color/colorBlack"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -38,7 +39,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.371" />
+        app:layout_constraintVertical_bias="0.535" />
 
     <TextView
         android:id="@+id/tvUresult"
@@ -56,28 +57,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.107" />
-
-    <EditText
-        android:id="@+id/etU_GetText"
-        android:layout_width="280dp"
-
-        android:layout_height="54dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.626" />
+        app:layout_constraintVertical_bias="0.221" />
 
     <Button
         android:id="@+id/btnU_Search"
+        android:textColor="@color/colorBlack"
         android:layout_width="150dp"
         style="@style/btn_blue"
         android:layout_height="50dp"
@@ -90,6 +74,6 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="0.877" />
+        app:layout_constraintVertical_bias="0.819" />
 
 </android.support.constraint.ConstraintLayout>
