--- a/app/src/main/res/layout-land/activity_editdata.xml
+++ b/app/src/main/res/layout-land/activity_editdata.xml
@@ -7,7 +7,7 @@
     tools:context="com.android.alovia.projectqrcode.Editdata">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tvE_aas1"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:textSize="18dp"
@@ -22,11 +22,11 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintVertical_bias="0.057" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tvE_aas5"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:textSize="18dp"
@@ -38,15 +38,15 @@
         android:gravity="center_vertical"
         android:text="วันที่จัดซื้อ"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.776" />
+        app:layout_constraintVertical_bias="0.747" />
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="120dp"
+        android:id="@+id/tvE_aas4"
+        android:layout_width="110dp"
         android:layout_height="30dp"
         android:layout_marginBottom="8dp"
         android:textSize="18dp"
@@ -57,14 +57,14 @@
         android:textColor="@color/colorBlack"
         android:gravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.184"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.594" />
+        app:layout_constraintVertical_bias="0.575" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tvE_aas3"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:textSize="18dp"
@@ -76,14 +76,14 @@
         android:textColor="@color/colorBlack"
         android:gravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.405" />
+        app:layout_constraintVertical_bias="0.402" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvE_aas2"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:layout_marginBottom="8dp"
@@ -95,11 +95,11 @@
         android:text="ชื่อครุภัณฑ์"
         android:gravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.23" />
+        app:layout_constraintVertical_bias="0.233" />
 
     <ImageView
         android:id="@+id/imageView14"
@@ -111,16 +111,16 @@
         android:layout_marginTop="8dp"
         android:onClick="on_Eback"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.976"
+        app:layout_constraintHorizontal_bias="0.985"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.984"
+        app:layout_constraintVertical_bias="0.025"
         app:srcCompat="@android:drawable/ic_menu_revert"
         tools:ignore="ContentDescription" />
 
     <EditText
-        android:id="@+id/etE_name"
+        android:id="@+id/etET_Ename21"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:textSize="18dp"
@@ -136,11 +136,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.722"
-        app:layout_constraintVertical_bias="0.204" />
+        app:layout_constraintHorizontal_bias="0.858"
+        app:layout_constraintVertical_bias="0.207" />
 
     <EditText
-        android:id="@+id/etE_location"
+        android:id="@+id/etET_location21"
         android:textSize="18dp"
         android:layout_width="180dp"
         android:layout_height="40dp"
@@ -156,11 +156,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.722"
-        app:layout_constraintVertical_bias="0.386" />
+        app:layout_constraintHorizontal_bias="0.858"
+        app:layout_constraintVertical_bias="0.382" />
 
     <EditText
-        android:id="@+id/etE_price"
+        android:id="@+id/etET_Eprice21"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:textSize="18dp"
@@ -176,11 +176,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.722"
-        app:layout_constraintVertical_bias="0.58" />
+        app:layout_constraintHorizontal_bias="0.858"
+        app:layout_constraintVertical_bias="0.561" />
 
     <EditText
-        android:id="@+id/etE_date"
+        android:id="@+id/etET_Edate21"
         android:textSize="18dp"
         android:layout_width="180dp"
         android:layout_height="40dp"
@@ -196,13 +196,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.722"
-        app:layout_constraintVertical_bias="0.768" />
+        app:layout_constraintHorizontal_bias="0.858"
+        app:layout_constraintVertical_bias="0.739" />
 
     <Button
-        android:id="@+id/btnE_edit"
+        android:id="@+id/btnE_edit21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorBlack"
         android:text="แก้ไข"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/btn_blue"
@@ -216,7 +217,7 @@
         app:layout_constraintVertical_bias="0.972" />
 
     <TextView
-        android:id="@+id/textVEA1"
+        android:id="@+id/tvET_tv112"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:textColor="@color/colorBlack"
@@ -232,6 +233,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.026"
-        app:layout_constraintHorizontal_bias="0.722" />
+        app:layout_constraintHorizontal_bias="0.858" />
+
+    <ImageView
+        android:id="@+id/imgEE_img11"
+        android:layout_width="201dp"
+        android:layout_height="173dp"
+        app:srcCompat="@drawable/bg_img_view"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.021" />
 
 </android.support.constraint.ConstraintLayout>
