--- a/app/src/main/res/layout-land/activity_editdata2.xml
+++ b/app/src/main/res/layout-land/activity_editdata2.xml
@@ -7,6 +7,22 @@
     tools:context="com.android.alovia.projectqrcode.Editdata2">
 
     <ImageView
+        android:id="@+id/imgE2_img2"
+        android:layout_width="204dp"
+        android:layout_height="189dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.428"
+        app:srcCompat="@drawable/bg_img_view"
+        app:layout_constraintHorizontal_bias="0.021" />
+
+    <ImageView
         android:id="@+id/imageView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,11 +32,11 @@
         android:layout_marginTop="8dp"
         android:onClick="on_EUback"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.976"
+        app:layout_constraintHorizontal_bias="0.985"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.984"
+        app:layout_constraintVertical_bias="0.025"
         app:srcCompat="@android:drawable/ic_menu_revert"
         tools:ignore="ContentDescription" />
 
@@ -40,8 +56,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.112"
-        app:layout_constraintHorizontal_bias="0.736" />
+        app:layout_constraintVertical_bias="0.085"
+        app:layout_constraintHorizontal_bias="0.815" />
 
     <TextView
         android:id="@+id/textVEU2"
@@ -59,8 +75,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.316"
-        app:layout_constraintHorizontal_bias="0.736" />
+        app:layout_constraintVertical_bias="0.267"
+        app:layout_constraintHorizontal_bias="0.815" />
 
     <TextView
         android:id="@+id/textVEU3"
@@ -78,8 +94,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.531"
-        app:layout_constraintHorizontal_bias="0.736" />
+        app:layout_constraintVertical_bias="0.458"
+        app:layout_constraintHorizontal_bias="0.815" />
 
     <TextView
         android:id="@+id/textVEU4"
@@ -97,8 +113,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.762"
-        app:layout_constraintHorizontal_bias="0.736" />
+        app:layout_constraintVertical_bias="0.65"
+        app:layout_constraintHorizontal_bias="0.815" />
 
     <TextView
         android:id="@+id/textVEU5"
@@ -116,8 +132,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.973"
-        app:layout_constraintHorizontal_bias="0.736" />
+        app:layout_constraintVertical_bias="0.848"
+        app:layout_constraintHorizontal_bias="0.815" />
 
     <TextView
         android:id="@+id/textView4"
@@ -135,8 +151,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.252"
-        app:layout_constraintVertical_bias="0.14" />
+        app:layout_constraintVertical_bias="0.115" />
 
     <TextView
         android:id="@+id/textView8"
@@ -151,11 +166,10 @@
         android:gravity="center"
         android:text="วันที่จัดซื้อ"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.252"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.974" />
+        app:layout_constraintVertical_bias="0.853" />
 
     <TextView
         android:id="@+id/textView7"
@@ -170,11 +184,11 @@
         android:textColor="@color/colorBlack"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.263"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.769" />
+        app:layout_constraintVertical_bias="0.661"
+        app:layout_constraintHorizontal_bias="0.521" />
 
     <TextView
         android:id="@+id/textView6"
@@ -189,11 +203,10 @@
         android:textColor="@color/colorBlack"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.252"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.546" />
+        app:layout_constraintVertical_bias="0.476" />
 
     <TextView
         android:id="@+id/textView5"
@@ -208,10 +221,9 @@
         android:text="ชื่อครุภัณฑ์"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.252"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.338" />
+        app:layout_constraintVertical_bias="0.29" />
 
 </android.support.constraint.ConstraintLayout>
