--- a/app/src/main/res/layout-land/activity_generatecode.xml
+++ b/app/src/main/res/layout-land/activity_generatecode.xml
@@ -20,7 +20,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.974"
+        app:layout_constraintVertical_bias="0.025"
         app:srcCompat="@android:drawable/ic_menu_revert"
         tools:ignore="ContentDescription" />
 
@@ -118,6 +118,7 @@
         android:id="@+id/btnGen_Add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorBlack"
         android:text="เพิ่มข้อมูล"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -128,13 +129,14 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.87"
-        app:layout_constraintHorizontal_bias="0.584" />
+        app:layout_constraintVertical_bias="0.328"
+        app:layout_constraintHorizontal_bias="0.983" />
 
     <Button
         android:id="@+id/btnGen_Genqrcode"
         android:layout_width="wrap_content"
         style="@style/btn_blue"
+        android:textColor="@color/colorBlack"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
@@ -145,8 +147,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.87"
-        app:layout_constraintHorizontal_bias="0.832" />
+        app:layout_constraintVertical_bias="0.538"
+        app:layout_constraintHorizontal_bias="0.982" />
 
     <TextView
         android:id="@+id/textView"
@@ -162,15 +164,15 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintHorizontal_bias="0.544"
-        app:layout_constraintVertical_bias="0.028" />
+        app:layout_constraintHorizontal_bias="0.575"
+        app:layout_constraintVertical_bias="0.723" />
 
     <TextView
         android:id="@+id/textView1"
         android:textColor="@color/colorBlack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1.กรอกข้อมูล และ กดเพิ่มข้อมูล"
+        android:text="1.กรอกข้อมูล เลือกรูป และ กดเพิ่มข้อมูล"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
@@ -179,8 +181,8 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintHorizontal_bias="0.73"
-        app:layout_constraintVertical_bias="0.089" />
+        app:layout_constraintHorizontal_bias="0.882"
+        app:layout_constraintVertical_bias="0.782" />
 
     <TextView
         android:id="@+id/textView2"
@@ -196,7 +198,41 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintHorizontal_bias="0.631"
-        app:layout_constraintVertical_bias="0.151" />
+        app:layout_constraintHorizontal_bias="0.667"
+        app:layout_constraintVertical_bias="0.861" />
+
+    <Button
+        android:id="@+id/btnG_Getimg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="เลือกรูป"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.655"
+        android:textColor="@color/colorBlack"
+        style="@style/btn_blue"
+        app:layout_constraintVertical_bias="0.538" />
+
+    <ImageView
+        android:id="@+id/imgG_img232"
+        android:layout_width="157dp"
+        android:layout_height="137dp"
+        app:srcCompat="@drawable/bg_img_view"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.68"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.038" />
 
 </android.support.constraint.ConstraintLayout>
