--- a/app/src/main/res/layout-land/activity_login_admin.xml
+++ b/app/src/main/res/layout-land/activity_login_admin.xml
@@ -20,12 +20,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.974"
+        app:layout_constraintVertical_bias="0.025"
         app:srcCompat="@android:drawable/ic_menu_revert"
         tools:ignore="ContentDescription" />
 
     <Button
         android:id="@+id/btnLA_login"
+        android:textColor="@color/colorBlack"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
@@ -110,7 +111,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.246"
-        app:layout_constraintVertical_bias="0.646"
+        app:layout_constraintVertical_bias="0.643"
         tools:ignore="ContentDescription" />
 
     <ImageView
