--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -20,7 +20,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.974"
+        app:layout_constraintVertical_bias="0.025"
         app:srcCompat="@android:drawable/ic_menu_revert"
         tools:ignore="ContentDescription" />
 
@@ -120,6 +120,7 @@
         android:layout_height="wrap_content"
         android:text="เพิ่มผู้ใช้"
         android:layout_marginRight="8dp"
+        android:textColor="@color/colorBlack"
         style="@style/btn_blue"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
