--- a/app/src/main/res/layout-land/activity_user_area.xml
+++ b/app/src/main/res/layout-land/activity_user_area.xml
@@ -20,7 +20,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.974"
+        app:layout_constraintVertical_bias="0.025"
         app:srcCompat="@android:drawable/ic_menu_revert"
         tools:ignore="ContentDescription" />
 
@@ -40,6 +40,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.966"
+        android:textColor="@color/colorBlack"
         tools:layout_editor_absoluteY="248dp" />
 
     <ImageView
