--- a/app/src/main/res/layout/activity_admin_area.xml
+++ b/app/src/main/res/layout/activity_admin_area.xml
@@ -37,11 +37,12 @@
         android:onClick="btnA_genqrcode"
         android:text="สร้าง คิวอาร์โค้ดใหม่"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.077"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@color/colorBlack"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.889" />
+        app:layout_constraintVertical_bias="0.754"
+        app:layout_constraintHorizontal_bias="0.036" />
 
     <Button
         android:id="@+id/btnA_Scan"
@@ -49,6 +50,7 @@
         style="@style/btn_blue"
         android:layout_height="55dp"
         android:layout_marginBottom="8dp"
+        android:textColor="@color/colorBlack"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
@@ -71,18 +73,18 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:onClick="on_Register"
+        android:textColor="@color/colorBlack"
         android:text="เพิ่มผู้ใช้งานใหม่"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.754"
-        app:layout_constraintHorizontal_bias="0.077" />
+        app:layout_constraintVertical_bias="0.901" />
 
     <ImageView
         android:id="@+id/img_View"
-        android:layout_width="305dp"
-        android:layout_height="284dp"
+        android:layout_width="225dp"
+        android:layout_height="199dp"
         style="@style/img_view"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -92,7 +94,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintVertical_bias="0.157" />
 
 </android.support.constraint.ConstraintLayout>
