--- a/app/src/main/res/layout/activity_backgroundscan2.xml
+++ b/app/src/main/res/layout/activity_backgroundscan2.xml
@@ -28,6 +28,7 @@
         android:id="@+id/btnU_Scan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorBlack"
         style="@style/btn_blue"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
@@ -38,8 +39,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.235"
-        app:layout_constraintHorizontal_bias="0.504" />
+        app:layout_constraintVertical_bias="0.469" />
 
     <TextView
         android:id="@+id/tvUresult"
@@ -57,27 +57,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.085" />
-
-    <EditText
-        android:id="@+id/etU_GetText"
-        android:layout_width="280dp"
-        android:layout_height="54dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
+        app:layout_constraintVertical_bias="0.227" />
 
     <Button
         android:id="@+id/btnU_Search"
         android:layout_width="wrap_content"
+        android:textColor="@color/colorBlack"
         android:layout_height="wrap_content"
         style="@style/btn_blue"
         android:text="ค้นหา"
