--- a/app/src/main/res/layout/activity_editdata.xml
+++ b/app/src/main/res/layout/activity_editdata.xml
@@ -7,7 +7,7 @@
     tools:context="com.android.alovia.projectqrcode.Editdata">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tvE_aas1"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:textSize="18dp"
@@ -23,10 +23,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.029"
-        app:layout_constraintVertical_bias="0.46" />
+        app:layout_constraintVertical_bias="0.401" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tvE_aas5"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:textSize="18dp"
@@ -42,10 +42,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.863" />
+        app:layout_constraintVertical_bias="0.761" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tvE_aas4"
         android:layout_width="120dp"
         android:layout_height="30dp"
         android:layout_marginBottom="8dp"
@@ -61,10 +61,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.748" />
+        app:layout_constraintVertical_bias="0.671" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tvE_aas3"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:textSize="18dp"
@@ -80,10 +80,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.662" />
+        app:layout_constraintVertical_bias="0.579" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvE_aas2"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:layout_marginBottom="8dp"
@@ -99,7 +99,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.566" />
+        app:layout_constraintVertical_bias="0.489" />
 
     <ImageView
         android:id="@+id/imageView14"
@@ -120,7 +120,7 @@
         tools:ignore="ContentDescription" />
 
     <EditText
-        android:id="@+id/etE_name"
+        android:id="@+id/etET_Ename21"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:textSize="18dp"
@@ -137,10 +137,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.787"
-        app:layout_constraintVertical_bias="0.567" />
+        app:layout_constraintVertical_bias="0.499" />
 
     <EditText
-        android:id="@+id/etE_location"
+        android:id="@+id/etET_location21"
         android:textSize="18dp"
         android:layout_width="180dp"
         android:layout_height="40dp"
@@ -157,10 +157,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.787"
-        app:layout_constraintVertical_bias="0.661" />
+        app:layout_constraintVertical_bias="0.59" />
 
     <EditText
-        android:id="@+id/etE_price"
+        android:id="@+id/etET_Eprice21"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:textSize="18dp"
@@ -177,10 +177,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.787"
-        app:layout_constraintVertical_bias="0.743" />
+        app:layout_constraintVertical_bias="0.684" />
 
     <EditText
-        android:id="@+id/etE_date"
+        android:id="@+id/etET_Edate21"
         android:textSize="18dp"
         android:layout_width="180dp"
         android:layout_height="40dp"
@@ -197,12 +197,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.787"
-        app:layout_constraintVertical_bias="0.866" />
+        app:layout_constraintVertical_bias="0.776" />
 
     <Button
-        android:id="@+id/btnE_edit"
+        android:id="@+id/btnE_edit21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorBlack"
         android:text="แก้ไข"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/btn_blue"
@@ -213,10 +214,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.984" />
+        app:layout_constraintVertical_bias="0.894" />
 
     <TextView
-        android:id="@+id/textVEA1"
+        android:id="@+id/tvET_tv112"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:textColor="@color/colorBlack"
@@ -231,11 +232,11 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.455"
+        app:layout_constraintVertical_bias="0.409"
         app:layout_constraintHorizontal_bias="0.787" />
 
     <ImageView
-        android:id="@+id/imgE_img1"
+        android:id="@+id/imgEE_img11"
         android:layout_width="201dp"
         android:layout_height="173dp"
         app:srcCompat="@drawable/bg_img_view"
