--- a/app/src/main/res/layout/activity_generatecode.xml
+++ b/app/src/main/res/layout/activity_generatecode.xml
@@ -120,6 +120,7 @@
         android:layout_height="wrap_content"
         android:text="เพิ่มข้อมูล"
         style="@style/btn_blue"
+        android:textColor="@color/colorBlack"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
@@ -134,6 +135,7 @@
     <Button
         android:id="@+id/btnGen_Genqrcode"
         style="@style/btn_blue"
+        android:textColor="@color/colorBlack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -161,7 +163,7 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintHorizontal_bias="0.088"
+        app:layout_constraintHorizontal_bias="0.114"
         app:layout_constraintVertical_bias="0.709" />
 
     <TextView
@@ -169,7 +171,7 @@
         android:textColor="@color/colorBlack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1.กรอกข้อมูล และ กดเพิ่มข้อมูล"
+        android:text="1.กรอกข้อมูล เลือกรูป และ กดเพิ่มข้อมูล"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
@@ -178,8 +180,8 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintHorizontal_bias="0.202"
-        app:layout_constraintVertical_bias="0.759" />
+        app:layout_constraintHorizontal_bias="0.272"
+        app:layout_constraintVertical_bias="0.765" />
 
     <TextView
         android:id="@+id/textView2"
@@ -195,8 +197,8 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintHorizontal_bias="0.152"
-        app:layout_constraintVertical_bias="0.811" />
+        app:layout_constraintHorizontal_bias="0.148"
+        app:layout_constraintVertical_bias="0.82" />
 
     <Button
         android:id="@+id/btnG_Getimg"
@@ -212,38 +214,24 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.971"
+        android:textColor="@color/colorBlack"
+        style="@style/btn_blue"
         app:layout_constraintVertical_bias="0.499" />
-
-    <Button
-        android:id="@+id/btnG_Upload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="อัพโหลดรูป"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.971"
-        app:layout_constraintVertical_bias="0.624" />
 
     <ImageView
         android:id="@+id/imgG_img232"
-        android:layout_width="137dp"
-        android:layout_height="122dp"
+        android:layout_width="157dp"
+        android:layout_height="137dp"
         app:srcCompat="@drawable/bg_img_view"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.147"
+        app:layout_constraintHorizontal_bias="0.132"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="0.551" />
+        app:layout_constraintVertical_bias="0.567" />
 
 </android.support.constraint.ConstraintLayout>
