--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,7 @@
         android:text="ลงชื่อเข้าใช้ ผู้ใช้ทั่วไป"
         android:onClick="on_user"
         style="@style/btn_blue"
+        android:textColor="@color/colorBlack"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,6 +28,8 @@
 
     <Button
         android:id="@+id/btnL_Admin"
+        android:textColor="@color/colorBlack"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ลงชื่อเข้าใช้ ผู้ดูแล"
