--- a/app/src/main/res/layout/activity_login_admin.xml
+++ b/app/src/main/res/layout/activity_login_admin.xml
@@ -8,6 +8,7 @@
 
     <Button
         android:id="@+id/btnLA_login"
+        android:textColor="@color/colorBlack"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
@@ -91,7 +92,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.086"
-        app:layout_constraintVertical_bias="0.624" />
+        app:layout_constraintVertical_bias="0.631" />
 
     <ImageView
         android:id="@+id/imageView4"
