--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -116,6 +116,7 @@
 
     <Button
         android:id="@+id/btnR_register"
+        android:textColor="@color/colorBlack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="เพิ่มผู้ใช้"
