--- a/app/src/main/res/layout/activity_generatecode.xml
+++ b/app/src/main/res/layout/activity_generatecode.xml
@@ -87,7 +87,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:hint="ราคาต่อหน่วย"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.183"
@@ -105,7 +105,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="date"
         android:hint="วันที่ซื้อ"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.183"
